--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-</head>
 <body>
-    <p id="demo">Hello World</p>
-    <script src="index.js"></script>
-    
+
+<h1 id="id1">My Heading 1</h1>
+
+<button type="button" onclick="document.getElementById('id1').style.color =
+'red'">Click me!</button>
 </body>
 </html>
